# finalcm

./: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  animan.c  animan.h  atom.c  atom.h  composite.c  composite.h  coverswitch.c  coverswitch.h  damage.c  damage.h  event.c  event.h  expose.c  expose.h  finalwm.c  finalwm.h  managed_win.h  opacity.h  pointer.c  pointer.h  property.c  property.h  render.c  render.h  window.c  window.h  ws.c  ws.h  wt.c  wt.h  xfixes.c  xfixes.h  zoom.c  zoom.h
