bin_PROGRAMS = finalcm
finalcm_SOURCES = atom.c zoom.c xfixes.c expose.c animan.c damage.c coverswitch.c event.c finalwm.c pointer.c property.c window.c wt.c ws.c composite.c render.c
finalcm_LDFLAGS = -lm -lpthread `pkg-config --libs xcb xcb-image xcb-composite xcb-event xcb-damage xcb-property xcb-aux xcb-render xcb-renderutil xcb-atom xcb-icccm`
finalcm_CFLAGS = -Wall -pedantic -ggdb
